# hydramq-rs

./: .gitignore  Cargo.toml  LICENSE
benches/: segment_benches.rs
src/: lib.rs  topic.rs
src/codec/: decoder.rs  encoder.rs  message_codec.rs  mod.rs  simple.rs  size_calculator.rs  util.rs
src/message/: message.rs  message_set.rs  mod.rs
src/pipeline/: mod.rs
src/topic/: mod.rs
