[package]
name = "hydramq"
version = "0.1.0"
authors = ["Jimmie Fulton"]

[dependencies]
bitflags = "1.0.0"
base64 = "0.9.0"
bytes = "0.4.5"
chrono = "0.3"
crossbeam = "0.3"
crossbeam-channel = "0.1"
linked-hash-map = { version="0.5", features = ["serde_impl"] }
rmp = "0.8.7"
rmp-serde = "0.13.7"
serde = "1.0"
serde_bytes = "0.10.3"
serde_derive = "1.0"
serde_json = "1.0"
uuid = { version = "0.5.0", features = ["v1", "v4"] }
